test/scc_test/exp/semantic-errors/034.t
void test()
{
    const int a;
    a *= 1;
}